# QGIS

./: AGENTS.md  CMakeLists.txt  INSTALL.md  dependence.md  setup.cfg_notes.md
i18n/: CMakeLists.txt  note.md
images/icons/: CMakeLists.txt
python/: CMakeLists.txt
python/plugins/: CMakeLists.txt
python/plugins/processing/: CMakeLists.txt  ProcessingPlugin.py  yxb_ProcessingPlugin_note.md  yxb__init__py_note.md  yxb_metadata_note.md
python/plugins/processingmcpserver/: CMakeLists.txt  MCP_CAPABILITIES.md  README.md  __init__.py  capabilities_markdown.py  config.py  config_defaults.py  config_loader.py  config_parsers.py  config_types.py  dependency_contract.py  dependency_evaluator.py  dependency_manager.py  dependency_models.py  dependency_probe.py  dependency_reporting.py  log_handler.py  mcp_main_thread_runner.py  mcp_prompts.py  mcp_resources.py  mcp_tools.py  metadata.txt  plugin.py  requirements.txt  server.py  transports.py
python/plugins/qcopilots_common/: CMakeLists.txt  __init__.py  bridge.py  builtin_tools.py  constants.py  discovery.py  interactive_layer_tools.py  logging.py  manifest.py  mcp_http.py  menu.py  metadata.txt  plugin.py  process_controller.py  processing_tools.py  service_id.py  service_plugin.py  skills.py  subprocess_utils.py  uv_runtime.py  workspace_roots.py
python/plugins/qcopilots_mcp_server_builtin_tools/: CMakeLists.txt  __init__.py  metadata.txt  plugin.py  qcopilots_service.json  server.py
python/plugins/qcopilots_mcp_server_interactive_tools/: CMakeLists.txt  __init__.py  metadata.txt  plugin.py  qcopilots_service.json  server.py
python/plugins/qcopilots_mcp_server_processing_raster/: CMakeLists.txt  __init__.py  metadata.txt  plugin.py  qcopilots_service.json  qcopilots_service.schema.json  server.py
python/plugins/qcopilots_mcp_server_processing_vector/: CMakeLists.txt  __init__.py  metadata.txt  plugin.py  qcopilots_service.json  server.py
python/plugins/qcopilots_mcp_server_skills/: CMakeLists.txt  __init__.py  metadata.txt  plugin.py  qcopilots_service.json  qcopilots_service.schema.json  server.py
python/plugins/qcopilots_mcp_servers_manager/: CMakeLists.txt  __init__.py  metadata.txt  plugin.py  qcopilots_manager_config.json  qcopilots_manager_config.schema.json
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  mainwin.cpp  qgis_win32.aps  qgis_win32.rc  qgisapp.cpp  qgisapp.h  qgisappinterface.h  qgsabout.cpp  qgsappbrowserproviders.cpp  qgsattributetabledialog.cpp  qgsattributetabledialog.h  qgscustomization.h  qgscustomizationdialog.h  qgspluginregistry.cpp  qgspluginregistry.h  startuphelper.h
src/app/layers/: qgsapplayerhandling.cpp
src/core/: CMakeLists.txt  qgsapplication.cpp  qgsapplication.h  qgslogger.h  qgsmaplayer.cpp  qgsmaplayer.h  qgspluginlayerregistry.h  qgsptpfiles.cpp  qgsptpfiles.h
src/core/processing/: qgsprocessingregistry.h
src/core/project/: qgsproject.h
src/core/vector/: qgsvectorlayer.cpp  qgsvectorlayer.h
src/gui/: qgisinterface.h  qgsdatasourcemanagerdialog.cpp  qgsdatasourcemanagerdialog.h  qgsnewvectorlayerdialog.cpp  qgsnewvectorlayerdialog.h
src/gui/layertree/: qgslayertreeview.h
src/plugins/: CMakeLists.txt  qgisplugin.h
src/plugins/DLHJ_Copilots_toolbox/: CMakeLists.txt  DLHJ_Copilots_toolbox_plugin.cpp  DLHJ_Copilots_toolbox_plugin.h  DLHJ_Copilots_toolbox_plugin.qrc  PluginCopilotsToolbox.cpp  PluginCopilotsToolbox.h  PluginCopilotsToolbox.qrc
src/plugins/analysis_ready_data_toolbox/: CMakeLists-modified.txt  CMakeLists-original.txt  CMakeLists-v1.txt  CMakelists.txt  analysis_ready_data_tools-original-v1.cpp  analysis_ready_data_tools.cpp  analysis_ready_data_tools.h  analysis_ready_data_tools.qrc
src/plugins/bin_moving_target_mapping_layout_vectorization/: CMakeLists.txt  main.cpp  moving_target_mapping_layout_vectorization.cpp  moving_target_mapping_layout_vectorization.h  moving_target_mapping_layout_vectorization.ui  moving_target_mapping_layout_vectorization_plugin.qrc
src/plugins/geoextractandprocess/: CMakeLists.txt  CSE_GeoExtractAndProcess.cpp  CSE_GeoExtractAndProcess.h  CSE_MapSheet.cpp  CSE_MapSheet.h  automerge.cpp  automerge.h  automerge.ui  better_than_5w_match.cpp  better_than_5w_match.h  better_than_5w_match.ui  better_than_5w_merge_features.cpp  better_than_5w_merge_features.h  better_than_5w_merge_features.ui  convert_data_to_gb_or_gjb.cpp  convert_data_to_gb_or_gjb.h  convert_data_to_gb_or_gjb.ui  convert_data_to_gjb.cpp  convert_data_to_gjb.h  convert_data_to_gjb.ui  convert_operationarea_and_sheet.cpp  convert_operationarea_and_sheet.h  convert_operationarea_and_sheet.ui  copy_shapefiles.cpp  copy_shapefiles.h  copy_shapefiles.ui  create_operationarea_between.cpp  create_operationarea_between.h  create_operationarea_between.ui  create_operationarea_range.cpp  create_operationarea_range.h  create_operationarea_range.ui  geoextractandprocess_plugin.cpp  geoextractandprocess_plugin.h  geoextractandprocess_plugin.qrc  geoextractandprocess_plugin_gui.cpp  geoextractandprocess_plugin_gui.h  geoextractandprocess_plugin_guibase.ui  geoextractandprocess_plugin_set_merge_params.ui  geoextractandprocess_plugin_setmergeparams.cpp  (+35 more)
src/plugins/geometry_checker/: CMakeLists.txt
src/plugins/llama_webui/: CMakeLists.txt  qgsllamawebuidock.cpp  qgsllamawebuidock.h  qgsllamawebuiplugin.cpp  qgsllamawebuiplugin.h
src/plugins/odata_format_conversion_toolbox/: CMakeLists.txt  odata_format_conversion_plugin.cpp  odata_format_conversion_plugin.h  odata_format_conversion_plugin.qrc
src/plugins/offline_editing/: CMakeLists.txt  offline_editing_plugin.cpp
src/plugins/planet_data_products_toolbox/: CMakeLists.txt  planet_data_products_toolbox_plugin.cpp  planet_data_products_toolbox_plugin.h  planet_data_products_toolbox_plugin.qrc
src/process/: CMakeLists.txt  main.cpp  qgsprocess.h
src/providers/: CMakeLists.txt
src/python/: CMakeLists.txt  qgspythonutilsimpl.cpp  qgspythonutilsimpl.h
src/starmap_src/: CMakeLists.txt
src/ui/: qgisapp.ui  qgsabout.ui  qgsdetaileditemwidgetbase.ui  qgsvectorlayerpropertiesbase.ui
(+932 files in other folders)
